--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,9 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,400;1,300&display=swap"
-    rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Sacramento" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ef1290e982.js" crossorigin="anonymous"></script>
 
   <title>Throw Me A Bone</title>
 </head>
