--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
   <title>Throw Me A Bone</title>
 </head>
 
-  <body class="d-flex flex-column h-100">
+  <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
