--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
   <meta charset="utf-8" />
@@ -28,7 +28,7 @@
   <title>Throw Me A Bone</title>
 </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
